added masonry to muffin list

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="style.css">
+    <title>Muffin Morning</title>
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/css/uikit.min.css" />
     <!-- UIkit JS -->
@@ -12,7 +13,7 @@
   <body>
     <div id="muffin-list" class="uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid="masonry: true"></div>
   </body>
-  <script src="src/muffinAdaptor.js"></script>
-  <script src="src/muffin.js"></script>
-  <script src="src/index.js"></script>
+  <script src="src/muffin.js" charset="utf-8"></script>
+  <script src="src/muffinAdaptor.js" charset="utf-8"></script>
+  <script src="src/index.js" charset="utf-8"></script>
 </html>
