--- a/index.html
+++ b/index.html
@@ -15,7 +15,76 @@
 
 <body class="container">
 
+  <nav class="uk-navbar-container uk-margin uk-border-rounded" uk-navbar>
+    <div class="uk-navbar-left">
+      <a id="animate-logo" class="uk-navbar-item uk-logo" href="#">Muffin Morning</a>
+      <ul class="uk-navbar-nav">
+        <li id="add-muffin">
+          <a href="#new-muffin" uk-toggle>
+            <span class="uk-icon uk-margin-small-right" uk-icon="icon: plus"></span>
+            Muffin
+          </a>
+        </li>
+        <li id="login">
+          <a href="#login" uk-toggle>
+            <span class="uk-icon uk-margin-small-right" uk-icon="icon: user"></span>
+            Login
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <div id="muffin-list" class="uk-child-width-1-3@m" uk-grid="masonry: true"></div>
+
+  <div id="new-muffin" uk-modal>
+    <div class="uk-modal-dialog">
+        <button class="uk-modal-close-default" type="button" uk-close></button>
+        <div class="uk-modal-header">
+          <h2 class="uk-modal-title">Add Muffin</h2>
+        </div>
+        <div class="uk-modal-body">
+          <form>
+            <fieldset class="uk-fieldset">
+              <div class="uk-margin">
+                <input class="uk-input" type="text" name="flavor" placeholder="Flavor">
+              </div>
+              <div class="uk-margin">
+                <input class="uk-input" type="text" name="calorie" placeholder="Calorie">
+              </div>
+              <div class="uk-margin">
+                <input class="uk-input" type="text" name="image_url" placeholder="Image URL">
+              </div>
+        </div>
+              <div class="uk-modal-footer uk-text-right">
+                <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
+                <button class="uk-button uk-button-primary" type="submit">Add</button>
+              </div>
+            </fieldset>
+          </form>
+    </div>
+  </div>
+
+  <div id="login" class="uk-modal-full" uk-modal>
+    <div class="uk-modal-dialog">
+      <button class="uk-modal-close-full uk-close-large" type="button" uk-close></button>
+      <div class="uk-grid-collapse uk-child-width-1-2@s uk-flex-middle" uk-grid>
+        <div class="uk-background-cover" style="background-image: url('');" uk-height-viewport></div>
+          <div class="uk-padding-large">
+            <form>
+              <div class="uk-margin">
+                <div class="uk-inline">
+                  <span class="uk-form-icon" uk-icon="icon: user"></span>
+                  <input class="uk-input" type="text">
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 <script src="src/muffin.js" charset="utf-8"></script>
