--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Muffin
           </a>
         </li>
-        <li id="login">
+        <li id="login" data-name="">
           <a href="#login" uk-toggle>
             <span class="uk-icon uk-margin-small-right" uk-icon="icon: user"></span>
             Login
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <div id="muffin-list" class="uk-child-width-1-3@m" uk-grid="masonry: true"></div>
+  <div id="muffin-list" class="uk-child-width-1-3@m" uk-grid="masonry: true" uk-grid uk-scrollspy="cls: uk-animation-fade; target: > div > .uk-card; delay: 150; repeat: true"></div>
 
   <div id="new-muffin" uk-modal>
     <div class="uk-modal-dialog">
@@ -47,25 +47,25 @@
           <form>
             <fieldset class="uk-fieldset">
               <div class="uk-margin">
-                <input class="uk-input" type="text" name="flavor" placeholder="Flavor">
+                <input class="uk-input uk-border-rounded" type="text" name="flavor" placeholder="Flavor">
               </div>
               <div class="uk-margin">
-                <input class="uk-input" type="text" name="calorie" placeholder="Calorie">
+                <input class="uk-input uk-border-rounded" type="text" name="calorie" placeholder="Calorie">
               </div>
               <div class="uk-margin">
-                <input class="uk-input" type="text" name="image_url" placeholder="Image URL">
+                <input class="uk-input uk-border-rounded" type="text" name="image_url" placeholder="Image URL">
               </div>
         </div>
               <div class="uk-modal-footer uk-text-right">
-                <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
-                <button class="uk-button uk-button-primary" type="submit">Add</button>
+                <button class="uk-button uk-border-rounded uk-button-default uk-modal-close" type="button">Cancel</button>
+                <button class="uk-button uk-border-rounded uk-button-primary" type="submit">Add</button>
               </div>
             </fieldset>
           </form>
     </div>
   </div>
 
-  <div id="login" class="uk-modal-full" uk-modal>
+  <div id="login" class="uk-modal-full uk-animation-slide-top" uk-modal>
     <div class="uk-modal-dialog">
       <button class="uk-modal-close-full uk-close-large" type="button" uk-close></button>
       <div class="uk-grid-collapse uk-child-width-1-2@s uk-flex-middle" uk-grid>
@@ -76,9 +76,10 @@
               <div class="uk-margin">
                 <div class="uk-inline">
                   <span class="uk-form-icon" uk-icon="icon: user"></span>
-                  <input class="uk-input" type="text">
+                  <input class="uk-input uk-border-rounded" name="name" type="text">
                 </div>
               </div>
+              <button class="uk-button uk-border-rounded uk-button-primary" type="submit">Login</button>
             </form>
           </div>
         </div>
