--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             Login
           </a>
         </li>
+        <!-- <li id="random" data-name="">
+          <a>
+            <span class="uk-icon uk-margin-small-right" uk-icon="icon: question"></span>
+            Random Muffin
+          </a>
+        </li> -->
       </ul>
     </div>
   </nav>
